<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>layout-demo</artifactId>
        <groupId>com.greenlabs</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>
    <name>layoutdemo-web</name>
    <artifactId>layoutdemo-web</artifactId>

    <properties>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <tomcat.webport>8084</tomcat.webport>
        <tomcat.ajpport>8182</tomcat.ajpport>
        <tomcat.context>/layoutdemo-web</tomcat.context>
        <gwtVersion>2.6.1</gwtVersion>
        <build.profile.id>dev</build.profile.id>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>2.6.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>2.6.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-codeserver</artifactId>
            <version>2.6.1</version>
        </dependency>
        <dependency>
            <groupId>com.sencha.gxt</groupId>
            <artifactId>gxt</artifactId>
            <version>3.1.0</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.sencha.gxt</groupId>
            <artifactId>gxt-theme-neptune</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>layoutdemo</finalName>
        <!-- Generate compiled stuff in the folder used for developing mode -->
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <filters>
            <filter>../profiles/${build.profile.id}/config.properties</filter>
        </filters>

    <plugins>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <version>2.6.1</version>
            <executions>
                <execution>
                    <goals>
                        <goal>compile</goal>
                        <goal>run</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <module>com.greenlabs.layoutdemo.web.View</module>
                <runTarget>layoutdemo.html</runTarget>
                <strict>true</strict>
                <hostedWebapp>${webappDirectory}</hostedWebapp>
                <generateDirectory>${project.build.directory}/sources</generateDirectory>
                <optimizationLevel>9</optimizationLevel>
                <extraJvmArgs>-Djava.io.tmpdir=${project.build.directory}/tmp
                </extraJvmArgs>
                <disableRunAsync>true</disableRunAsync>
                <logLevel>INFO</logLevel>
                <style>PRETTY</style>
                <localWorkers>4</localWorkers>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.4</version>
            <executions>
                <execution>
                    <phase>install</phase>
                    <goals>
                        <goal>exploded</goal>
                        <goal>war</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
                <source>1.7</source>
                <target>1.7</target>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.tomcat.maven</groupId>
            <artifactId>tomcat7-maven-plugin</artifactId>
            <version>2.0</version>
            <configuration>
                <path>${tomcat.context}</path>
                <port>${tomcat.webport}</port>
                <ajpPort>${tomcat.ajpport}</ajpPort>
                <systemProperties>
                    <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
                </systemProperties>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-maven-plugin</artifactId>
            <version>9.2.3.v20140905</version>
            <configuration>
                <jvmArgs>-Xmx -Xms -XX:PermSize= -XX:MaxPermSize= -XX:+HeapDumpOnOutOfMemoryError</jvmArgs>
                <scanIntervalSeconds>5</scanIntervalSeconds>
                <reload>manual</reload>
                <webAppConfig>
                    <contextPath>/layoutdemo</contextPath>
                </webAppConfig>
                <httpConnector>
                    <port>8084</port>
                </httpConnector>
                <stopKey/>
                <stopPort/>
            </configuration>
            <dependencies>
                <dependency>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                    <version>1.2</version>
                </dependency>
            </dependencies>
        </plugin>
    </plugins>

        <resources>
            <resource>
                <directory>${basedir}/src/main/java</directory>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/client/*.java</include>
                    <include>**/*.gwt.xml</include>
                </includes>
            </resource>
        </resources>

    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <build.profile.id>dev</build.profile.id>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <build.profile.id>prod</build.profile.id>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <build.profile.id>test</build.profile.id>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <properties>
                <log.path>/var/log/layoutdemo/log/web/</log.path>
                <upload.location>/var/log/layoutdemo/upload/</upload.location>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <cache.path>/Users/Administrator/cache/</cache.path>
                <log.path>/Users/Administrator/log/core/</log.path>
            </properties>
        </profile>
        <profile>
            <id>windows</id>
            <properties>
                <log.path>C:/layoutdemo/log/web/</log.path>
                <upload.location>C:/layoutdemo/upload/</upload.location>
            </properties>
        </profile>
    </profiles>

</project>